--- a/Changes
+++ b/Changes
@@ -1,2 +1,8 @@
 0.01
-	- p5find-regex
+        - p5find-regex
+        - p5find-str
+        - p5find-sub
+        - p5find-token-word
+        - p5find-unused-package
+        - p5find-variable-methods
+        - p5find-words-used-only-once
