--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+   - Add "p5find" master command
+   - Add "p5find-help" command
+
 0.04    2019-09-14T19:29:06+0900
    - Add "p5find-method-call" to replace "p5find-variable-methods"
    - More documentation.
